@@ -3,14 +3,14 @@ package com.ebook_translator.ebook_translator.application.service;
 import com.ebook_translator.ebook_translator.application.dto.TranslateEbookCommand;
 import com.ebook_translator.ebook_translator.application.port.in.TranslateEbookUseCase;
 import com.ebook_translator.ebook_translator.application.port.out.ExtractEpubPort;
+import com.ebook_translator.ebook_translator.domain.model.DocumentTranslationPayload;
 import com.ebook_translator.ebook_translator.domain.service.EpubFormatValidator;
 import com.ebook_translator.ebook_translator.domain.service.HtmlParser;
+import com.ebook_translator.ebook_translator.domain.service.HtmlTranslationExtractorService;
 import com.ebook_translator.ebook_translator.domain.service.ReaderOrderResolver;
 import com.ebook_translator.ebook_translator.infrastructure.adapter.out.storage.opf.ContentOpfParser;
-import org.jsoup.nodes.Document;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TranslateEbookService implements TranslateEbookUseCase {
 
@@ -19,6 +19,7 @@ public class TranslateEbookService implements TranslateEbookUseCase {
     private final ContentOpfParser contentOpfParser;
     private final ReaderOrderResolver readerOrderResolver;
     private final HtmlParser htmlParser;
+    private final HtmlTranslationExtractorService htmlTranslationExtractorService;
 
     private final String CONTENT_OPF_PATH = "content.opf";
 
@@ -27,13 +28,15 @@ public class TranslateEbookService implements TranslateEbookUseCase {
             ExtractEpubPort extractEpubPort,
             ContentOpfParser contentOpfParser,
             ReaderOrderResolver readerOrderResolver,
-            HtmlParser htmlParser
+            HtmlParser htmlParser,
+            HtmlTranslationExtractorService htmlTranslationExtractorService
     ) {
         this.epubFormatValidator = epubFormatValidator;
         this.extractEpubPort = extractEpubPort;
         this.contentOpfParser = contentOpfParser;
         this.readerOrderResolver = readerOrderResolver;
         this.htmlParser = htmlParser;
+        this.htmlTranslationExtractorService = htmlTranslationExtractorService;
     }
 
     @Override
@@ -43,10 +46,15 @@ public class TranslateEbookService implements TranslateEbookUseCase {
         var contentOpfPath = epubPath.resolve(CONTENT_OPF_PATH);
         var parsedContentOpf = contentOpfParser.parse(contentOpfPath);
         var resolver = readerOrderResolver.resolve(parsedContentOpf.manifest(), parsedContentOpf.spine());
-        List<Document> htmlsToTranslate =
+        List<DocumentTranslationPayload> documentsToTranslate =
                 resolver.stream()
-                        .map((readerOrderItem) -> htmlParser.parse(contentOpfPath.getParent().resolve(readerOrderItem.href())))
-                        .collect(Collectors.toList());
+                        .map(readerOrderItem -> {
+                            var document = htmlParser.parse(contentOpfPath.getParent().resolve(readerOrderItem.href()));
+                            return htmlTranslationExtractorService.extract(readerOrderItem.href(), document);
+                        })
+                        .toList();
+
+        System.out.println(documentsToTranslate);
 
     }
 }
